--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             </div>
         </div>
              <div class="nav">
-            <a href="">首页</a>
-            <a href="">关于我</a>
-            <a href="">专业技能</a>
-            <a href="">我的作品</a>
-            <a href="">个人博客</a>
+            <a href="#/step-1">首页</a>
+            <a href="#/step-2">关于我</a>
+            <a href="#/step-3">专业技能</a>
+            <a href="#/step-5">我的作品</a>
+            <a href="#/step-6">个人博客</a>
         </div>
         <div id="impress">
             <div class="step index" data-x="0" data-y="0">
@@ -34,7 +34,7 @@
                          <fieldset>
                              <legend>个人信息</legend>
                                  <p>所在地：广东 深圳</p>
-                                 <p>学历：大专，2011年毕业与某某名牌大学</p>
+                                 <p>学历：大专，2011年毕业于中山火炬大学</p>
                                  <p>电话：15002099366</p>   
                          </fieldset>
                          <fieldset>
@@ -94,6 +94,34 @@
                    </div>
                </div>
                 
+            </div>
+            <div class="step tool" data-x="1400" data-y="2000" data-rotate="0">
+                 <p class="title">我的作品</p>
+                <div class="float">
+                    <div class="mar">
+                        <img src="image/kobe01.jpg">
+                        <a href="http://newyoung21.github.io/kobe" target:"_blank"><p>致敬科比</p></a>
+                    </div>
+                </div>
+                <div class="float">
+                    <div>
+                        <img src="image/sheep01.jpg">
+                        <a href="http://newyoung21.github.io/sheep" target:"_blank"><p>H5小游戏</p></a>
+                    </div>
+                </div>
+            </div>
+            <div class="step tool" data-x="3000" data-y="2000" data-rotate="0">
+                <p class="title">个人博客</p>
+                <div>
+                    <img src="image/boke.PNG">
+                    <a href="http://newyoung21.github.io"><p>行健阁</p></a>
+                </div>
+            </div>
+            <div class="step tool" data-x="3000" data-y="2000" data-z="-200000" data-rotate-x="0" data-scale="1">
+                <div class="me">
+                    <img src="image/w.jpg">
+                </div>
+                 <p class="d">快把我放到碗里来吧</p>
             </div>
             <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
         </div>
