--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
                 <p>为了获得更好的体验，请使用最新的 <b>Chrome</b>, <b>Safari</b> 或者 <b>Firefox</b> 浏览器。</p>
             </div>
         </div>
-             <div class="nav">
+         <div class="hint">
+                    <p>使用空格键或箭头键浏览</p>
+        </div>
+        <div class="nav">
             <a href="#/bored">首页</a>
             <a href="#/step-2">关于我</a>
             <a href="#/step-3">专业技能</a>
@@ -34,7 +37,7 @@
                          <fieldset>
                              <legend>个人信息</legend>
                                  <p>所在地：广东 深圳</p>
-                                 <p>学历：大专，2011年毕业于中山火炬大学</p>
+                                 <p>学历：大专，2011年毕业于中山火炬职业技术学院,计算应用专业</p>
                                  <p>电话：15002099366</p>   
                          </fieldset>
                          <fieldset>
@@ -125,14 +128,6 @@
             </div>
             <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
         </div>
-        <div class="hint">
-                    <p>使用空格键或箭头键浏览</p>
-        </div>
-        <script>
-if ("ontouchstart" in document.documentElement) { 
-    document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
-}
-</script>
         <script src="js/impress.js"></script>
         <script>impress().init();</script>
     </body>
