--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div>
                     <div class="tool-b">
                         <p class="tool-p">调试工具</p>
-                        <p class="anim">chrome调试台</p>
+                        <p class="anim">chrome调试</p>
                     </div>
                     <div class="tool-b">
                         <p class="tool-p">开发工具</p>
