--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                     <img src="image/uu.jpg">
                 </div>
                 <p><strong>我叫林越</strong></br>26岁</p>
-                <p>想成为一名前端开发工程师</p>
-                <p class="size">"勇气就是怕的要死，但仍驭马前征"</p>
+               
+                <p class="size">"生活的本意是爱，谁不会爱，谁就不能理解生活"</p>
+                <p >爱前端 爱生活</p>
             </div>
             <div class="step about" data-x="1400" data-y="0" data-rotate="180" >
                   <p class="p"><strong>关于我</strong></p>
@@ -65,7 +66,7 @@
                 <div>
                     <div class="major-content">JavaScript</div>
                     <div class="major-content">jQuery</div>
-                    <div class="major-content">PHP</div>
+                    <div class="major-content">seajs</div>
                 </div>
             </div>
             <div class="step tool"data-x="0" data-y="1200"data-scale="1" data-rotate="90">
@@ -126,7 +127,7 @@
                 </div>
                  <p class="d">快把我放到碗里来吧</p>
             </div>
-            <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
+           
         </div>
         <script src="js/impress.js"></script>
         <script>impress().init();</script>
