--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                          <fieldset>
                              <legend>个人信息</legend>
                                  <p>所在地：广东 深圳</p>
-                                 <p>学历：大专，2011年毕业于中山火炬职业技术学院,计算应用专业</p>
+                                 <p>学历：大专，2011年毕业于中山火炬职业技术学院,计算机应用专业</p>
                                  <p>电话：15002099366</p>   
                          </fieldset>
                          <fieldset>
