--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="css/demo.css" rel="stylesheet" />
     </head>
     <body >
-        <div class="impress-supported">
+        <div class="impress-not-supported">
             <div class="fallback-message">
                 <p>你的浏览器<b>不支持</b> impress.js, 所以当前展示的是简化版。</p>
                 <p>为了获得更好的体验，请使用最新的 <b>Chrome</b>, <b>Safari</b> 或者 <b>Firefox</b> 浏览器。</p>
@@ -20,7 +20,7 @@
             <a href="#/step-2">关于我</a>
             <a href="#/step-3">专业技能</a>
             <a href="#/step-5">我的作品</a>
-            <a href="#/step-6">个人博客</a>
+            <a href="#/step-7">个人博客</a>
         </div>
         <div id="impress">
             <div id="bored" class="step index" data-x="0" data-y="0">
@@ -63,7 +63,7 @@
                     <div class="major-content">seajs</div>
                 </div>
             </div>
-            <div class="step tool"data-x="0" data-y="1200"data-scale="1" data-rotate="90">
+            <div class="step tool2"data-x="0" data-y="1200"data-scale="1" data-rotate="90">
                 <p class="title">开发环境</p>
                 <div>
                     <div class="tool-b">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <div class="step tool" data-x="4500" data-y="2000" data-rotate="0">
+            <div class="step tool2" data-x="5000" data-y="2000" data-rotate="0">
                 <p class="title">个人博客</p>
                 <div>
                     <img src="image/boke.PNG">
